@@ -8,7 +8,7 @@ unq:name
 'Medicines'
 'Metals'
 'Minerals'
-'Slaves'
+'Slavery'
 'Technology'
 'Textiles'
 'Waste'
