@@ -3,6 +3,7 @@ TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
 ==============================================================================
 
 v6.2.1 [wip]
+. (kfsone) Gamma 2.0.5 renamed "Slaves" category to "Slavery"
 . (gazelle) Stations, distances, ship data
 . (gulasch) Stations and distances
 . (kfsone) "sell" now has a --ages option too
